# govorirc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
govord/: CMakeLists.txt  Channel.h  Client.h  Command.h  CommandRegistry.h  Motd.cpp  Motd.h  Numerics.cpp  Numerics.h  Server.cpp  Server.h  Whowas.cpp  Whowas.h  fwd.h  govord.cpp
govord/core/: m_cap.cpp  m_cap.h  m_invite.cpp  m_invite.h  m_join.cpp  m_join.h  m_kick.cpp  m_kick.h  m_list.cpp  m_list.h  m_mode.cpp  m_mode.h  m_motd.cpp  m_motd.h  m_names.cpp  m_names.h  m_nick.cpp  m_nick.h  m_notice.cpp  m_notice.h  m_part.cpp  m_part.h  m_pass.cpp  m_pass.h  m_pingpong.cpp  m_pingpong.h  m_privmsg.cpp  m_privmsg.h  m_quit.cpp  m_quit.h  m_topic.cpp  m_topic.h  m_user.cpp  m_user.h  m_who.cpp  m_who.h  m_whois.cpp  m_whois.h  m_whowas.cpp  m_whowas.h
govorirc/: CMakeLists.txt  Cli.cpp  Cli.h  Socket.cpp  Socket.h  Ui.cpp  Ui.h  govorirc.cpp
scripts/: cert_gen.bat
shared/: IrcMessage.cpp  IrcMessage.h  SocketCompat.cpp  SocketCompat.h  Utils.cpp  Utils.h  config.h
